@@ -16,7 +16,7 @@ my $builder = Module::Build->new(
     },
     build_requires => {
         'Test::More' => 0,
-	'Test/Perl/Critic' => 0,
+	'Test::Perl::Critic' => 0,
     },
     recommends => {},
     create_makefile_pl => 'traditional',
