@@ -8,11 +8,11 @@ WriteMakefile
           'EXE_FILES' => [],
           'VERSION_FROM' => 'lib/Catalyst/Model/Estraier.pm',
           'PREREQ_PM' => {
+                           'Test::Perl::Critic' => 0,
                            'Test::More' => 0,
                            'Catalyst::Helper' => 0,
                            'FindBin' => 0,
                            'version' => 0,
-                           'Test/Perl/Critic' => 0,
                            'Search::Estraier' => 0
                          }
         )
